fixes overflow issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
-body {
+
+
+body, html {
   font-family: 'Lexend', sans-serif;
   margin: 0;
+  overflow-x: hidden;
 }
 
 
